@@ -183,6 +183,7 @@ if test "$with_python" != "no" ; then
     fi
     if test "$PYTHON" != ""
     then
+        echo "PYTHON is pointing at $PYTHON"
         PYTHON_VERSION=`$PYTHON -c "import sys; print sys.version[[0:3]]"`
 	echo Found Python version $PYTHON_VERSION
 	LIBXML2_PYTHON=`$PYTHON -c "try : import libxml2 ; print 1
